<resources>
    <string name="app_name">WhatsApp</string>
    <string name="whatsApp">WhatsApp</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="description">Description</string>
    <string name="_15_04_2021">15/04/2021</string>
    <string name="tab_to_add_status_update">Tab to add status update...</string>
    <string name="my_status">My Status</string>
    <string name="_15_04_2021_9_10_pm">15/04/2021,9:10 pm</string>
    <string name="todo">TODO</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="whatsApp_will_send_an_sms_message_to_verify_your_phone_number">WhatsApp will send an SMS message to verify your phone number</string>
    <string name="plus">+</string>
    <string name="_91">91</string>
    <string name="phone_number">Phone Number</string>
    <string name="carrie_sms_charge_may_apply">Carrie SMS charge may apply</string>
    <string name="next">NEXT</string>
    <string name="enter_code">Enter Code</string>
    <string name="please_provide_your_name_and_an_optional_profile_photo">Please provide your name and an optional profile photo</string>
    <string name="profile_info">Profile info</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="invite_your_friends">Invite your Friends</string>
    <string name="none_of_your_contacts_are_using_whatsapp_nuse_the_button_below_to_invite_them">None of your contacts are using WhatsApp.\nUse the button below to invite them.</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="chat_with_your_friends_who_are_use_whatsapp_on_iphone_nandroid_or_kaios_phone">Chat with your friends who are use WhatsApp on iphone, \nAndroid, or KaiOS phone</string>
    <string name="search">Search</string>
    <string name="hey_there_s_i_am_using_whatsapp">Hey there\'s I am using WhatsApp</string>
    <string name="themes_wallpapers_chat_history">Themes, wallpapers, chat history</string>
    <string name="notifications">Notifications</string>
    <string name="message_group_call_tones">Message, group , call tones</string>
    <string name="data_and_storage_usage">Data and storage usage</string>
    <string name="network_usage_auto_download">Network usage, auto-download</string>

    <string name="f_a_c_e_b_o_o_k">F A C E B O O K</string>
    <string name="privacy_security_change_number">Privacy, security, change number</string>
    <string name="account">Account</string>
    <string name="faq_contact_us_privacy_policy">FAQ, contact us, privacy policy</string>
    <string name="from">from</string>
    <string name="name">Name</string>
    <string name="this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_whatsapp_contact">This is not your username or pin. This name will be visible to your WhatsApp contact.</string>
    <string name="about">About</string>
    <string name="hey_there_i_am_using_whatsapp">Hey there! I am using WhatsApp</string>
    <string name="phone">Phone</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="gallery">Gallery</string>
    <string name="profile_Photo">Profile photo</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="select_contact">Select contact</string>
    <string name="last_seen_today_at_9_00am">last seen today at 9:00am</string>
    <string name="document">Document</string>
    <string name="camera">Camera</string>
    <string name="audio">Audio</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="type_a_message">Type a message</string>
    <string name="block">Block</string>
    <string name="report_contact">Report contact</string>
    <string name="_91_xxx_xxx">+91 XXX XXX</string>
    <string name="_7_july_2019">7 july 2019</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="message_to_this_chat_and_calls_are_secured_with_end_to_end_encryption_tap_to_verify">Message to this chat and calls are secured with end-to-end encryption. Tap to verify.</string>
    <string name="encryption">Encryption</string>
    <string name="media_visibility">Media visibility</string>
    <string name="custom_notification">Custom notification</string>
    <string name="mute_notification">Mute notification</string>
</resources>