<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">

    <LinearLayout
        android:id="@+id/llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/txt_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/floatingBtnColor"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llayout"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/whatsApp_will_send_an_sms_message_to_verify_your_phone_number"
            android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="17sp"
                android:hint="@string/_91" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:maxLength="10"
                android:textSize="17sp"
                android:inputType="number"
                android:maxLines="1" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/carrie_sms_charge_may_apply" />

        <EditText
            android:id="@+id/et_phone_number_code"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_code"
            android:maxLength="6"
            android:textSize="17sp"
            android:inputType="number"
            android:maxLines="1"
            tools:ignore="TextFields" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:backgroundTint="@color/floatingBtnColor"
        android:text="@string/next" />


</RelativeLayout>
