<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CallFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_call_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/ln_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_your_friends"
            android:textSize="25sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/none_of_your_contacts_are_using_whatsapp_nuse_the_button_below_to_invite_them"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/invite_a_friend"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/chat_with_your_friends_who_are_use_whatsapp_on_iphone_nandroid_or_kaios_phone"/>

    </LinearLayout>

    <!--  <ProgressBar
          android:id="@+id/progress_circular"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"/>-->

</FrameLayout>