<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon_image_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/icon_male_profile" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:height="16sp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_phone"
                app:tint="@color/colorPrimary"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
           >

            <ImageView
                android:id="@+id/arrow_downward"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_downward"
                android:scaleType="center"
                app:tint="@color/arrowColor"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/call_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="15sp"
            android:text="@string/_15_04_2021_9_10_pm"
            android:textColor="#2E2E2E"
            />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>